# erc

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json
src/: App.tsx  HistoryShow.tsx  LoginForm.tsx  ProblemForm.tsx  SearchBar.tsx  ShiftIdentity.tsx  ShiftProblems.tsx  Wall.tsx  app.rs  defineProblem.tsx  index.tsx  (+5 more)
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/db/migrations/: 1_initial_schema.sql
src-tauri/src/: api.rs  config.rs  lib.rs  main.rs  memory.rs  model.rs  syncing.rs  tauri_manage.rs  test.rs  timer.rs  translator.rs
src-tauri/src/api/: auth.rs  department.rs  employee.rs  fetching.rs  for_selection.rs  machine.rs  note.rs  permissions.rs  persistence.rs  problem.rs  shift.rs  shift_problem.rs  spare_parts.rs  syncing.rs
src-tauri/src/api/relations/: shift_problem.rs
src-tauri/src/memory/: department.rs  employee.rs  machine.rs  note.rs  permissions.rs  problem.rs  shift.rs  shift_problem.rs  spare_part.rs  syncing.rs
src-tauri/src/memory/relations/: shift_problems.rs
src-tauri/src/syncing/: api.rs  cds.rs  memory.rs  updates.rs
src-tauri/src/syncing/memory/: department.rs  employee.rs  machine.rs  note.rs  permissions.rs  problem.rs  relations.rs  shift.rs  shift_problem.rs  spare_part.rs  syncing.rs
src-tauri/src/syncing/memory/relations/: shift_employee.rs  shift_problems.rs
src-tauri/src/tauri_manage/: async_commands.rs  components_commands.rs  models.rs  non_async_commands.rs  puzzle_pieces.rs  state.rs
src-tauri/src/tauri_manage/components_commands/: controll.rs  history.rs  shift_problem_form.rs
(+35 files in other folders)
