[package]
name = "errc"
version = "0.0.1"
description = "elegant rondy client"
authors = ["mahmoud eltahawy"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde   = { version = "1.0",  features = ["derive"] }
tauri   = { version = "1.2",  features = ["api-all"] }
chrono  = { version = "^0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio   = { version = "1",    features = ["full"] }
uuid    = { version = "^1",   features = ["v4", "serde"] }
bcrypt = "0.13.0"
dotenv  = "^0.15"
rec = { path = "../../rec" }
rusqlite = { version = "0.27.0", features = ["bundled","uuid","time"] }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" , "sqlite" , "migrate","time"] }
itertools = "0.10.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
